<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.blood_requestFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="Create Your Blood Request"
            android:textColor="@color/gray_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Contact Info"
            android:layout_marginStart="32dp"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"
                android:textSize="16sp"
                android:inputType="phone"
                android:textColor="@color/gray_light"
                android:drawablePadding="8dp"
                android:text="@string/ph"
                />

        </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_group"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:layout_marginStart="32dp"
                android:textStyle="bold"
                android:textColor="@color/gray_dark"/>
            <Spinner
                android:id="@+id/bg"
                android:layout_height="48dp"
                android:layout_width="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="2dp"
                android:prompt="@string/bld_grp"
                android:entries="@array/blood_group"
                android:background="@drawable/pink_border_bg"
                >

            </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Address"
            android:layout_marginStart="32dp"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_light"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_outline_location_on_24"
                android:textSize="16sp"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:textColor="@color/gray_light"
                android:drawablePadding="8dp"
                android:text="@string/location"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="56dp"
            android:layout_marginStart="56dp"
            android:backgroundTint="@color/pink_bg"
            android:text="Submit"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            android:layout_gravity="bottom|end"
            android:textStyle="bold"/>
    </LinearLayout>

</FrameLayout>